--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,10 +51,9 @@ ul {
     outline: none;
 }
 
-/* will make impossible for the user to select the text in the button */
-
 button,
 a {
+    /* will make impossible for the user to select the text in the button */
     user-select: none;
     -o-user-select: none;
     -ms-user-select: none; 
@@ -65,6 +64,7 @@ a {
     font-weight: bold;
     text-decoration: none;
     text-align: center;
+    cursor: pointer;
 } 
 
 .buttons {
@@ -245,15 +245,14 @@ a {
 
 .menu-icon {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 0px;
+    right: 10px;
     margin: 16px;
     border: none;
     height: 50px;
     width: 50px;
     border-radius: 50%;
     background-color: #d9cb11;
-    cursor: pointer;
 
     transition-duration: 350ms;
     -o-transition-duration: 350ms;
@@ -270,7 +269,7 @@ a {
 .menu-icon:focus {
     box-shadow:
     0 0 0 6px white,
-    0 0 0 9px black;
+    0 0 0 9px #d9cb11;
 }
 
 .menu-icon:hover {
@@ -288,6 +287,42 @@ a {
     font-family: "Fredoka One", cursive;
     font-size: 0.8rem;
     letter-spacing: 0.03rem;
+}
+
+.navigation-menu {
+    position: absolute;
+    top: 65px;
+    right: 12px;
+    padding: 5px 10px;
+    margin: 15px 10px;
+    background-color: #d9cb11f2;
+    border-radius: 5px;
+}
+
+.navigation-list {
+    margin: 0;
+    padding: 3px;
+    list-style: none;
+    text-align: right;
+}
+
+.navigation-items {
+    padding: 3px 0;
+}
+
+.navigation-links {
+    padding: 5px;
+    color: #9941bf;
+    border-radius: 5px;
+}
+
+.navigation-links:focus {
+    background-color: #9941bf;
+    color: #d9cb11;
+}
+
+.navigation-links:hover {
+    text-decoration: underline 2px #9941bf;
 }
 
 /* ------------------------------------------------------Footer */
@@ -420,7 +455,6 @@ a {
 .magnifier {
     border-style: none;
     background-color: transparent;
-    cursor: pointer;
     margin-left: 2em;
 }
 
@@ -459,6 +493,16 @@ a {
     text-align: center;
 }
 
+.go-play {
+    display: flex;
+    justify-content: center;
+    margin: 2em auto;
+    font-size: 0.9rem;
+}
+.go-play a {
+    font-size: 0.9rem;
+}
+
 /* Subject Content */
 
 .subject-content-wrapper {
@@ -466,6 +510,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
 }
 
 .subject-content {
@@ -582,74 +627,6 @@ a {
 }
 
 
-/* ------------------------------------------------------ Contact page */
-
-.form-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.contact-form {
-    width: 220px;
-    position: relative;
-    margin: 3em auto;
-    padding: 1em;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    background-color: #fcfcfc;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
-}
-
-.contact-form label,
-.contact-form input,
-.contact-form select,
-.contact-form textarea {
-    display: block;
-    text-align: left;
-    width: 90%;
-    margin: 0 auto;
-}
-
-.contact-form label {
-    margin: 1em 1em 0.3em;
-}
-
-.contact-form input,
-.contact-form select,
-.contact-form textarea {
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 3px;
-    font-family: "Andika New Basic", sans-serif;
-    font-size: 0.8rem;
-    padding: 0.3em;
-}
-
-#send-button {
-    font-size: 1rem;
-    margin: 2em;
-    padding: 0.3em;
-    border: 2px solid rgba(0, 0, 0, 0.4);
-    border-radius: 5px;
-    background-color: #fcfcfc;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
-}
-
-.contact-form input:focus,
-.contact-form select:focus,
-.contact-form textarea:focus,
-#send-button:focus {
-    box-shadow: 0 0 8px 0 #9941bf;
-    background-color: #3a8be980;
-}
-
-.contact-form input:hover,
-.contact-form select:hover,
-.contact-form textarea:hover,
-#send-button:hover {
-    box-shadow: 0 0 8px 0 #9941bf;
-}
 
 /* ------------------------------------------------------ 404 page */
 .error-section {
@@ -724,4 +701,133 @@ a {
 
 .error-links:hover {
     text-decoration: underline 2px #9941bf;
+}
+
+/* ------------------------------------------------------ Contact page */
+
+.form-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+#contact-form {
+    width: 220px;
+    position: relative;
+    margin: 3em auto;
+    padding: 1em;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background-color: #fcfcfc;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.45);
+}
+
+#contact-form label,
+#contact-form input,
+#contact-form select,
+#contact-form textarea {
+    display: block;
+    text-align: left;
+    width: 90%;
+    margin: 0 auto;
+}
+
+#contact-form label {
+    margin: 1em 1em 0.3em;
+}
+
+#contact-form input,
+#contact-form select,
+#contact-form textarea {
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    font-family: "Andika New Basic", sans-serif;
+    font-size: 0.8rem;
+    padding: 0.3em;
+}
+
+#send-button {
+    font-size: 1rem;
+    margin: 2em;
+    padding: 0.3em;
+    border: 2px solid rgba(0, 0, 0, 0.4);
+    border-radius: 5px;
+    background-color: #fcfcfc;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+}
+
+#contact-form input:focus,
+#contact-form select:focus,
+#contact-form textarea:focus,
+#send-button:focus {
+    box-shadow: 0 0 8px 0 #9941bf;
+    background-color: #3a8be980;
+}
+
+#contact-form input:hover,
+#contact-form select:hover,
+#contact-form textarea:hover,
+#send-button:hover {
+    box-shadow: 0 0 8px 0 #9941bf;
+}
+
+/* Modals */
+
+.contact-modals {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 300ms ease-in-out;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background-color: #fcfcfc;
+    z-index: 10;
+    padding: 1em;
+    text-align: center;
+    box-shadow: 0 0 0 5000px rgba(0, 0, 0, 0.9);
+}
+
+.show-modal {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.small-home-button {
+    padding: 0.5em;
+    width: fit-content;
+    margin: 1.5em auto;
+    box-shadow: none;
+    font-size: 1rem;
+}
+
+.contact-modals .small-buttons {
+    margin: 1em 0.8em;
+    font-size: 1rem;
+}
+
+.modal-header {
+    font-size: 1.2rem;
+    font-weight: bold;
+    padding: 1em;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+ 
+.close-modal {
+    font-size: 2rem;
+    font-weight: bold;
+    background: none;
+    border: none;
+}
+
+.close-modal:focus {
+    border-radius: 10px;
+    box-shadow: 0 0 0 2px red;
+}
+
+.close-modal:hover {
+    color: red;
 }
